--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,7 @@ asgiref==3.6.0
 Django==4.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
-postgres==4.0
-psycopg2-binary==2.9.6
-psycopg2-pool==1.1
+mysqlclient==2.1.1
 PyJWT==2.6.0
 pytz==2023.3
 secret-key-generator==0.0.8
