--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 mysqlclient==2.1.1
 PyJWT==2.6.0
+python-dotenv==1.0.0
 pytz==2023.3
 secret-key-generator==0.0.8
 sqlparse==0.4.3
