--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ mysqlclient==2.1.1
 PyJWT==2.6.0
 python-dotenv==1.0.0
 pytz==2023.3
+PyYAML==6.0
 secret-key-generator==0.0.8
+slippers==0.5.0
 sqlparse==0.4.3
