--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,3 @@
 [flake8]
-exclude = .git, *migrations*, *env*, core/settings.py
-max-line-length = 90
+exclude = .git, *migrations*, *env*, core/settings.py, */apps.py
+max-line-length = 100
